--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,5 +2,6 @@
 
     <div class="card-body">
         <app-currency-exchange></app-currency-exchange>
+        <app-country></app-country>
     </div>
 </div>
