--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
 
     <div class="card-body">
-        <app-contries></app-contries>
+        <app-country></app-country>
     </div>
 </div>
